[package]
name = "io_interner" 
version = "0.4.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "Little library for make a common storage out of an IO object."
repository = "https://github.com/IronThread/io_interner"
keywords = ["io","interner"]
categories = []

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
memchr = { version = "2", optional = true }

[features]
serde_support = ["serde", "serde_derive", "lazy_static", "memchr"]
nightly = []